# tldk

./: .gitignore  CMakeLists.txt  Makefile
app/nginx/src/tldk/: be.c
cmake/: FindDPDK.cmake
examples/: CMakeLists.txt  Makefile
examples/l4fwd/: CMakeLists.txt  Makefile  lcore.h  main.c  pkt.c  port.h
lib/: Makefile
lib/libtle_dring/: CMakeLists.txt  Makefile
lib/libtle_l4p/: CMakeLists.txt  Makefile  ctx.c  tcp_rxtx.c  tcp_stream.c  tle_tcp.h
lib/libtle_memtank/: CMakeLists.txt  Makefile
lib/libtle_misc/: CMakeLists.txt  Makefile  tle_dpdk_wrapper.h
lib/libtle_timer/: CMakeLists.txt  Makefile
mk/: tle.lib.mk
